overflow X fix and Added a footer

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body, * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
@@ -59,6 +60,12 @@ body {
     align-items: center;
     min-height: 400px;
     padding: 100px 20vw;
+    text-align: center;
+    color: #fff;
+}
+
+.stamp h6{
+    max-width: 100%;
     text-align: center;
     color: #fff;
 }
